feat(backend): Journey 1 audit fixes - security & filtering
P0 CRITICAL:
- Add rate limiting filter (Bucket4j) - 100/min general, 20/min auth, 60/min search
- Add XSS sanitization (Jsoup) in ReviewService and ListingService
- Make CORS origins configurable via app.cors.allowed-origins

P1 HIGH:
- Add hasAuthor(Long authorId) JPA Specification for proper author filtering
- Add authorId param to ListingController.getListings()
- Add publishedDate sorting in buildSort() for true 'New Releases'

Other:
- Create admin profile in ApplicationInitConfig to prevent profile setup redirect

Files: RateLimitFilter.java (new), HtmlSanitizer.java (new), pom.xml,
SecurityConfig.java, ListingController.java, ListingService.java,
ListingSpecification.java, ReviewService.java, application.properties